# ClipWallet

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTION_CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  MANUAL_INSTALLATION.md  PROJECT_IDEA.md  README.md  ROADMAP.md  SECURITY.md  build_release.sh  install.sh  prerequisites.txt
assets/: com.clipwallet.agent.plist.template
src/: config.rs  engine.rs  main.rs  notify.rs  static_store.rs
src/clipboard/: mime.rs  mod.rs  pasteboard.rs  types.rs
src/daemon/: mod.rs  plist.rs  status.rs
src/hotkey/: chord.rs  grabber.rs  injector.rs  mod.rs
src/storage/: disk.rs  encrypted.rs  mod.rs  ram.rs
